# canto-subtitle-cleaner

./: .gitignore  LICENSE  ORIGINAL-cleanup-automated-subs.py  README.md  canto_subtitle_cleaner.py  clean.py  format.py  output_test.srt  parse.py  pyproject.toml  srt.py
canto_subtitle_cleaner/: __main__.py  clean.py  format.py  parse.py  srt.py
tests/: Cardcaptor Sakura - 01.srt  Doraemon_517-518.srt  test.srt  test_canto_subtitle_cleaner.py  test_parse.py
